[gd_scene load_steps=4 format=3 uid="uid://delwv2x8u8fg0"]

[ext_resource type="Script" path="res://scenes/abilities/Robin/muchas_flechitas/muchas_flechitas.gd" id="1_hbym5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2peub"]
height = 0.5
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gcdyx"]
height = 0.5
radius = 1.0

[node name="muchas_flechitas" type="Node3D"]
script = ExtResource("1_hbym5")

[node name="cd_timer" type="Timer" parent="."]
one_shot = true

[node name="area_range" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collision" type="CollisionShape3D" parent="area_range"]
shape = SubResource("CylinderShape3D_2peub")

[node name="area_mouse" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collision" type="CollisionShape3D" parent="area_mouse"]
shape = SubResource("CylinderShape3D_gcdyx")

[node name="preview" type="MeshInstance3D" parent="."]
